--- a/index.html
+++ b/index.html
@@ -291,7 +291,8 @@
                 <p>男 | 21岁 | 共青团员 | 浙江省杭州市西湖区</p>
                 <div class="header-meta">
                     <span class="meta-item">📞 18692219462</span>
-                    <span class="meta-item">✉️ <a href="mailto:Ztc9447@163.com">Ztc9447@163.com</a></span>
+                    <span class="meta-item">✉️ <a
+                            href="mailto:302023315277@zjut.edu.cn">302023315277@zjut.edu.cn</a></span>
                     <span class="meta-item">🐙 <a href="https://github.com/n571e"
                             target="_blank">github.com/n571e</a></span>
                 </div>
